[gd_scene load_steps=4 format=3 uid="uid://c5evis4gxner6"]

[ext_resource type="Script" path="res://userinterfaces/menu_button/menu_button.gd" id="1_br05a"]
[ext_resource type="AudioStream" uid="uid://qfd1ssmpsil" path="res://assets/main_menu/press_sfx.wav" id="3_d40ju"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ul518"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("3_d40ju")
stream_0/weight = 1.0

[node name="MenuButton" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
focus_mode = 0
flat = true
script = ExtResource("1_br05a")

[node name="Sprite" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Sprite"]
position = Vector2(0, 0.871894)

[node name="PressAudio" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ul518")
pitch_scale = 0.8

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
